Stop ui issue with menu overflow scoll

--- a/public/styles/aplayout.less
+++ b/public/styles/aplayout.less
@@ -186,7 +186,7 @@ main {
 }
 
 nav#side, nav#chat {
-  overflow-y: scroll;
+  // overflow-y: scroll;
   display:block;
   position:fixed;
   height:auto;
